	-> Adapt the GUI appearance to the role a user has in the currently loaded collection, e.g. 'Reader' can not use the text editor or use 'save button' etc.
	-> Recycle bin for documents: contains deleted documents where they can be restored or deleted irreversible
	-> Stray documents list: the documents of a deleted collection can be added to another collection or irreversible deleted
	-> extended document metadata for archives (authority, hierarchy, backlink and external ID)
	-> bug fix: Error messages in the user manager were not closable 
	-> bug fix: merging of two shapes keeps the reading order and adds a space between them
	-> bug fix: selecting a tag from the table now also displays the right position in the image
	-> bug fix: Sorting lines according to coordinates now also works for tables (R-button in Layout tab)
	-> bug fix: Server export of tags and tables (xlsx) wasn't transparent to the user if there weren't any
	-> bug fix: Table export into xlsx also works fine for highly structured tables
	-> bug fix: vanishing properties in text tag property editor
	-> new textfield to quickly open a document with a certain id
	-> re-engineer the docking state buttons to quickly show/hide the control or transcription view with one click
	-> remove flickering in transcription widget while typing and scrolling
	-> add "show all lines of a page in the transcription widget" setting (enable via transcription widget toolbar wrench icon)
	-> add possibility to move transcription widget to the right side (enable via corresponding docking state dropdown menu button, i.e. third button on top left)
	-> PDF import: show progress during image extraction
	-> PDF import: path for temporary files is now correctly built in Linux
	-> bug fix: closing export dialog immediately after opening caused an exception (widget disposed)
	-> config.properties logHttp setting: enable to get full INFO level HTTP traffic log in console and log file  